[package]
name = "axum-graphql-seaorm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.9"
axum = "0.7.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"

[dependencies.sea-orm]
version = "1.0.1"
features = ["macros", "debug-print", "runtime-tokio-native-tls", "sqlx-sqlite"]
default-features = false

[dependencies.api]
path = "api/"
