[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.11"
async-graphql-axum = "7.0.11"
axum = "0.7.7"
sea-orm = "1.1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

[lib]
name = "api"
path = "src/lib.rs"
