[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies.async-graphql]
version = "7.0.9"

[dependencies.sea-orm]
version = "1.0.1"
features = [
  "macros",
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
]